// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeasureFormInput renders circuit measure inputs correctly 1`] = `
<View>
  <View
    style={
      {
        "marginRight": 15,
        "width": 75,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 6,
          },
          {
            "backgroundColor": "rgba(232, 222, 248, 1)",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderWidth": 1,
          },
          {
            "borderRadius": 5,
          },
        ]
      }
      testID="text-input-outline"
    />
    <View>
      <View
        style={
          [
            {
              "paddingBottom": 0,
            },
            {
              "minHeight": 30,
              "paddingTop": 8,
            },
          ]
        }
      >
        <TextInput
          cursorColor="rgba(98, 91, 113, 1)"
          defaultValue=""
          editable={true}
          maxFontSizeMultiplier={1.5}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="13"
          placeholderTextColor="darkgray"
          selectionColor="rgba(98, 91, 113, 1)"
          style={
            [
              {
                "margin": 0,
                "zIndex": 1,
              },
              {
                "height": 30,
              },
              {
                "paddingBottom": 7,
                "paddingTop": 7,
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "paddingHorizontal": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              false,
              [
                {},
              ],
              {
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
          testID="text-input-outlined"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`MeasureFormInput renders correctly 1`] = `
<View>
  <View
    style={
      {
        "marginRight": 15,
        "width": 75,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 6,
          },
          {
            "backgroundColor": "rgba(232, 222, 248, 1)",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderWidth": 1,
          },
          {
            "borderRadius": 5,
          },
        ]
      }
      testID="text-input-outline"
    />
    <View>
      <View
        style={
          [
            {
              "paddingBottom": 0,
            },
            {
              "minHeight": 30,
              "paddingTop": 8,
            },
          ]
        }
      >
        <TextInput
          cursorColor="rgba(98, 91, 113, 1)"
          defaultValue=""
          editable={true}
          maxFontSizeMultiplier={1.5}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder=""
          placeholderTextColor="darkgray"
          selectionColor="rgba(98, 91, 113, 1)"
          style={
            [
              {
                "margin": 0,
                "zIndex": 1,
              },
              {
                "height": 30,
              },
              {
                "paddingBottom": 7,
                "paddingTop": 7,
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "paddingHorizontal": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              false,
              [
                {},
              ],
              {
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
          testID="text-input-outlined"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`MeasureFormInput renders with history 1`] = `
<View>
  <View
    style={
      {
        "marginRight": 15,
        "width": 75,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 6,
          },
          {
            "backgroundColor": "rgba(232, 222, 248, 1)",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderWidth": 1,
          },
          {
            "borderRadius": 5,
          },
        ]
      }
      testID="text-input-outline"
    />
    <View>
      <View
        style={
          [
            {
              "paddingBottom": 0,
            },
            {
              "minHeight": 30,
              "paddingTop": 8,
            },
          ]
        }
      >
        <TextInput
          cursorColor="rgba(98, 91, 113, 1)"
          defaultValue=""
          editable={true}
          maxFontSizeMultiplier={1.5}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="13"
          placeholderTextColor="darkgray"
          selectionColor="rgba(98, 91, 113, 1)"
          style={
            [
              {
                "margin": 0,
                "zIndex": 1,
              },
              {
                "height": 30,
              },
              {
                "paddingBottom": 7,
                "paddingTop": 7,
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "paddingHorizontal": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              false,
              [
                {},
              ],
              {
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
          testID="text-input-outlined"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`MeasureFormInput when the text input is invalid renders the error indicator 1`] = `
<View>
  <View
    style={
      {
        "marginRight": 15,
        "width": 75,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 6,
          },
          {
            "backgroundColor": "rgba(232, 222, 248, 1)",
            "borderColor": "rgba(179, 38, 30, 1)",
            "borderRadius": 4,
            "borderWidth": 2,
          },
          {
            "borderRadius": 5,
          },
        ]
      }
      testID="text-input-outline"
    />
    <View>
      <View
        style={
          [
            {
              "paddingBottom": 0,
            },
            {
              "minHeight": 30,
              "paddingTop": 8,
            },
          ]
        }
      >
        <TextInput
          cursorColor="rgba(179, 38, 30, 1)"
          defaultValue=""
          editable={true}
          maxFontSizeMultiplier={1.5}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="13"
          placeholderTextColor="darkgray"
          selectionColor="rgba(179, 38, 30, 1)"
          style={
            [
              {
                "margin": 0,
                "zIndex": 1,
              },
              {
                "height": 30,
              },
              {
                "paddingBottom": 7,
                "paddingTop": 7,
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "paddingHorizontal": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              false,
              [
                {},
              ],
              {
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
          testID="text-input-outlined"
          underlineColorAndroid="transparent"
          value="Q"
        />
      </View>
    </View>
  </View>
</View>
`;
